--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
       <div class="calc-button-row">
         <button class="ac" onClick="getValue('')">AC</button>
-        <button class="opt">empty</button>
-        <button class="opt">empty</button>
+        <button class="opt" onClick="getValue('+/-')">+/-</button>
+        <button class="opt" onClick="getValue('%')" >%</button>
         <button class="opt" onClick="getValue('/')">&#247;</button>
         <button onClick="getValue(7)">7</button>
         <button onClick="getValue(8)">8</button>
